monitoring/rancher/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system 
spec:
  parentRefs:
    - name: core-gateway
      namespace: default
  hostnames:
    - "web.12w.ir" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
